Fixed css overflow

--- a/YourMoviesForum/Web/YourMovies.Web/wwwroot/css/sendMessagechat.css
+++ b/YourMoviesForum/Web/YourMovies.Web/wwwroot/css/sendMessagechat.css
@@ -87,7 +87,7 @@
 
 .current-message {
     padding: 20px 30px 4px 30px;
-    width: 42.1vw;
+    width: 32.1vw;
     cursor: pointer;
 }
 
